# nu_cmd_lang77

./: Cargo.toml  README.md
crates/nu-cmd-shell/: Cargo.toml
crates/nu-cmd-shell/src/: default_context.rs  lib.rs
src/: main.rs  test_bins.rs
