[package]
authors = ["The Nushell Project Developers"]
default-run = "nu"
description = "A new type of shell"
documentation = "https://www.nushell.sh/book/"
edition = "2021"
exclude = ["images"]
homepage = "https://www.nushell.sh"
license = "MIT"
name = "nu"
repository = "https://github.com/nushell/nushell"
rust-version = "1.60"
version = "0.77.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ version }-{ target }.{ archive-format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[workspace]
members = [
	"crates/nu-cmd-shell",
]

[dependencies]
nu-cmd-shell = { path = "./crates/nu-cmd-shell", version = "0.77.1" }
chrono = { version = "0.4.23", features = ["serde"] }
crossterm = "0.24.0"
ctrlc = "3.2.1"
log = "0.4"
miette = { version = "5.5.0", features = ["fancy-no-backtrace"] }
nu-cli = { version = "0.77.0" }
nu-color-config = { version = "0.77.0" }
nu-cmd-lang = { version = "0.77.0" }
nu-engine = { version = "0.77.0" }
nu-json = { version = "0.77.0" }
nu-parser = { version = "0.77.0" }
nu-path = { version = "0.77.0" }
nu-plugin = { optional = true, version = "0.77.0" }
nu-pretty-hex = { version = "0.77.0" }
nu-protocol = { version = "0.77.0" }
nu-system = { version = "0.77.0" }
nu-table = { version = "0.77.0" }
nu-term-grid = { version = "0.77.0" }
nu-utils = { version = "0.77.0" }

nu-ansi-term = "0.47.0"
reedline = { version = "0.17.0", features = ["bashisms", "sqlite"] }

rayon = "1.7.0"
is_executable = "1.0.1"
simplelog = "0.12.0"
time = "0.3.12"

[target.'cfg(not(target_os = "windows"))'.dependencies]
# Our dependencies don't use OpenSSL on Windows
openssl = { version = "0.10.38", features = ["vendored"], optional = true }
signal-hook = { version = "0.3.14", default-features = false }


[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.26", default-features = false, features = [
	"signal",
	"process",
	"fs",
	"term",
] }
atty = "0.2"

[dev-dependencies]
nu-test-support = { version = "0.77.0" }
tempfile = "3.4.0"
assert_cmd = "2.0.2"
criterion = "0.4"
pretty_assertions = "1.0.0"
serial_test = "1.0.0"
hamcrest2 = "0.3.0"
rstest = { version = "0.16.0", default-features = false }
itertools = "0.10.3"

# Main nu binary
[[bin]]
name = "nu"
path = "src/main.rs"
